- (#45) Added fillShape() method to Graphics class
- (#45) Added Rectangle#intersects(Circle) and Circle#intersects(Rectangle)
- (#45) Circle now extends com.badlogic.gdx.math.Circle
- (#45) Added Polygon and Triangle classes
- (#46) Fixed ParticleEffect not flipped correctly on load
- (#48) Fixed alpha channel not being applied to line rendering
- Added RegularShape classes (shapes with equal interior angles)
- Added NPE prevention to TiledCollisionMapper
- Added additional drawTexture() methods to Graphics
- Added Sizeable and SizeChangeListener interfaces
- Added GameResizeListener and removed onResize method from GameContainer
- Added MdxException for mini2Dx runtime exceptions
- Added WorldListener interface to listen for entity creation/deletion
- Positionable instances now have getId() method
- Improved pixel rounding and reduced interpolation for CollisionBox, CollisionCircle and CollisionPoint
- Mdx.json can now read/write to/from FileHandle instances
- Fixed Mdx.xml not deserializing maps correctly when values are objects
- Fixed Mdx.xml and Mdx.json not serializing/deserialzing super class fields
- Fixed Mdx.xml and Mdx.json not deserialzing enum fields correctly
- Fixed Animation flipping Sprites when rendering at a coordinate
- QuadTrees
  * Added QuadTree interface for all QuadTree implementations
  * Existing Quad class renamed to PointQuadTree
  * Added thread-safe versions of PointQuadTree and RegionQuadTree
  * QuadTrees now have a watermark for remerging empty quads
  * Performance improvements to QuadTree implementations

[1.2.1]
- (#39) Fixed Animation flipping Sprites by default

[1.2.0]
- Updated to libGDX 1.6.5 and roboVM 1.6.0
- (#28) Added artemis-odb integration
- (#34) Fixed input not being polled if multiple updates occur in one frame
- (#35) Added TextureRegion wrapper class
- Added mini2Dx-specific game launcher classes
- Added forceTo(x, y) method to CollisionPoint and CollisionCircle